add goroutine wrapper, smtp helper, test cases, zap logger, make file
