# routes/main.go
@@ -1,10 +1,10 @@
 package routes
 
 import (
+	"github.com/Improwised/golang-api/middleware"
 	"sync"
 
-	controller "github.com/Improwised/golang-api/controller/api/v1"
-	// middleware "github.com/Improwised/golang-api/middelware"
+	controller "github.com/Improwised/golang-api/controllers/api/v1"
 	"github.com/doug-martin/goqu/v9"
 	"github.com/gofiber/fiber/v2"
 )
@@ -12,7 +12,7 @@ import (
 var mu sync.Mutex
 
 // Setup func
-func Setup(app *fiber.App, goqu *goqu.Database) {
+func Setup(app *fiber.App, goqu *goqu.Database) error {
 	mu.Lock()
 
 	app.Static("/assets/", "./assets")
@@ -21,23 +21,43 @@ func Setup(app *fiber.App, goqu *goqu.Database) {
 	})
 	router := app.Group("/api")
 
-	userController, _ := controller.NewUserController(goqu)
+	v1 := router.Group("/v1")
 
-	router.Post("/login", userController.DoAuth)
+	err := setupAuthController(v1, goqu)
+	if err != nil {
+		return err
+	}
 
-	// JWT Middleware
-	// router = middleware.TokenAuth(app)
+	err = setupUserController(v1, goqu)
+	if err != nil {
+		return err
+	}
 
-	// Group v1
-	v1 := router.Group("/v1", func(c *fiber.Ctx) error {
-		c.JSON(fiber.Map{
-			"message": "v1",
-		})
-		return c.Next()
-	})
-
-	// Bind handlers
-	v1.Get("/users", userController.UserGet)
-	v1.Post("/users", userController.UserCreate)
 	mu.Unlock()
+	return nil
+}
+
+func setupAuthController(v1 fiber.Router, goqu *goqu.Database) error {
+	authController, err := controller.NewAuthController(goqu)
+	if err != nil {
+		return err
+	}
+	v1.Post("/login", authController.DoAuth)
+	return nil
+}
+
+func setupUserController(v1 fiber.Router, goqu *goqu.Database) error {
+	userController, err := controller.NewUserController(goqu)
+	if err != nil {
+		return err
+	}
+
+	v1.Post("/users", userController.UserCreate)
+
+	userRouter := v1
+
+	userRouter = middleware.TokenAuth(userRouter)
+
+	userRouter.Get("/users/:user_id", userController.UserGet)
+	return nil
 }
